--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,5 @@ spring.datasource.url=jdbc:postgresql://localhost/sweater
 spring.datasource.username=postgres
 spring.datasource.password=789456
 spring.jpa.generate-ddl=true
+
+spring.mustache.expose-request-attributes=true
